# janet

./: .clippy.toml  .dockerignore  .gitignore  .gitmessage  .mcp.json  .pre-commit-config.yaml  .rustfmt.toml  .typos.toml  ARCHITECTURE_REFERENCE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.test  LICENSE  Makefile.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  conventional-commits.yml  docs.yml  release.yml  security.yml
janet-ai-context/: Cargo.toml  README.md
janet-ai-context/src/: lib.rs  text.rs
janet-ai-embed/: Cargo.toml  README.md
janet-ai-embed/examples/: modernbert_example.rs  simple_embedding.rs
janet-ai-embed/src/: config.rs  downloader.rs  error.rs  lib.rs  provider.rs
janet-ai-gtk/: Cargo.toml  README.md
janet-ai-gtk/src/: conversation.rs  main.rs  simple_ui.rs  style.css  ui.rs
janet-ai-mcp/: Cargo.toml  README.md  TODO.md
janet-ai-mcp/examples/: basic_usage.rs
janet-ai-mcp/src/: lib.rs  main.rs  server.rs
janet-ai-mcp/src/tools/: mod.rs  regex_search.rs  semantic_search.rs
janet-ai-mcp/tests/: integration.rs
janet-ai-retriever/: Cargo.toml  TODO.md
janet-ai-retriever/examples/: embedding_demo.rs  end_to_end_indexing.rs  working_demo.rs
janet-ai-retriever/examples/test_data/: README.md  api.js  utils.py
janet-ai-retriever/examples/test_data/src/: auth.rs  database.rs  http.rs  lib.rs  math.rs
janet-ai-retriever/migrations/: 001_initial.sql
janet-ai-retriever/src/: lib.rs  main.rs  status.rs
janet-ai-retriever/src/retrieval/: analyzer.rs  chunking_strategy.rs  directory_watcher.rs  enhanced_index.rs  file_index.rs  indexing_engine.rs  indexing_mode.rs  mod.rs  task_queue.rs
janet-ai-retriever/src/status/: api.rs  consistency.rs  database.rs  filesystem.rs  mod.rs  network.rs  performance.rs  tests.rs  types.rs
janet-ai-retriever/src/storage/: mod.rs  sqlite_store.rs
janet-ai-retriever/tests/: cli_integration.rs  integration_happy_path.rs
janet-context/: Cargo.toml  README.md
janet-context/src/: text.rs
janet-retriever/: Cargo.toml
janet-retriever/src/: lib.rs
janet-retriever/src/retrieval/: analyzer.rs  directory_watcher.rs  file_index.rs
janet-retriever/src/storage/: mod.rs  sqlite_store.rs
src/: main.rs
src/retrieval/: analyzer.rs  directory_watcher.rs  file_index.rs  mod.rs
