[package]
name = "janet-ai-gtk"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "janet-ai-gtk"
path = "src/main.rs"

[dependencies]
gtk4 = "0.9"
janet-ai-mcp = { path = "../janet-ai-mcp" }
relm4 = "0.9"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
