[package]
name = "janet-ai-mcp"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "janet-ai-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.31"
glob = "0.3.1"
half = "2.4.1"
ignore = "0.4.23"
janet-ai-context = { path = "../janet-ai-context" }
janet-ai-embed = { path = "../janet-ai-embed" }
janet-ai-retriever = { path = "../janet-ai-retriever" }
regex = "1.11.1"
rmcp = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tempfile = "3.19.1"
tracing-test = "0.2.5"
